force-app/main/default/objects/College__c/fields/College_id__c.field-meta.xml
<CustomField>
    <fullName>College_id__c</fullName>
    <label>College id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>