force-app/main/default/objects/College__c/fields/Populated_Date__c.field-meta.xml
<CustomField>
    <fullName>Populated_Date__c</fullName>
    <formula>Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Populated Date</label>
    <type>Date</type>
</CustomField>